--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "tbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/Bot.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/Bot.mjs"
   },
   "keywords": [],
   "author": "",
